feat: establish standalone Commerce application
